# AI-Dev-Guardian-Core

./: .env  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  report.json  report.sarif
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: main.rs
cli/: Cargo.toml
cli/src/: config.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
docs/: GITHUB_ACTIONS.md  INSTALLATION.md  RULES.md  USAGE.md
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/patch/: mod.rs
engine/src/report/: mod.rs
engine/src/rules/: mod.rs  registry.rs
engine/src/scanner/: mod.rs
examples/github-actions/: ai-dev-guardian.yml
test-app/: test.js  test.js.bak.bak
