[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine" }
common = { path = "../common" }

axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2.0", features = ["derive", "parsing"] }