[package]
name = "ai-dev-guardian-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ai-dev-guardian"
path = "src/main.rs"

[dependencies]
engine = { path = "../engine" }
common = { path = "../common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"