[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rayon = "1.8"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
syn = { version = "2.0", features = ["derive", "parsing"] }